# search

./: .clang-tidy  .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  buf.gen.yaml  scratch_debug.cpp
.github/workflows/: ci.yml  publish.yml
app/: index_main.cpp  search_main.cpp  server_main.cpp
data/: seed_urls.txt  stopwords_vi.txt
docs/: architecture.md  deployment.md  implementation_plan.md
include/search/common/: config.h  types.h  utils.h
include/search/crawler/: crawler.h
include/search/indexer/: disk_index.h  inverted_index.h  japanese_tokenizer.h  live_index.h  tokenizer.h
include/search/searcher/: live_searcher.h  searcher.h
include/server/: search_service.h
proto/grpc_service/v1/: search.proto
src/common/: utils.cpp
src/crawler/: crawler.cpp
src/indexer/: disk_index.cpp  inverted_index.cpp  japanese_tokenizer.cpp  live_index.cpp  tokenizer.cpp
src/searcher/: live_searcher.cpp  searcher.cpp
src/server/: search_service.cpp
tests/: CMakeLists.txt  test_crawler.cpp  test_disk_index.cpp  test_inverted_index.cpp  test_live_index.cpp  test_searcher.cpp  test_tokenizer.cpp  test_utils.cpp
